--- a/css/style.css
+++ b/css/style.css
@@ -597,9 +597,13 @@ button:focus{
 .about-img{
 	padding: 30px 0px;
 }
+.about-img img{
+	outline: 2px solid rgb(255, 255, 255);
+	outline-offset: 7px;
+}
 
 .about-img img{
-	border-radius: 10px;
+	border-radius: 20px;
 }
 
 .about-m ul{
