--- a/css/responsive.css
+++ b/css/responsive.css
@@ -45,10 +45,10 @@
 		height: 188px;
 		border-radius: 0px;
 	}
-	.countdown #timer div{
+	/* .countdown #timer div{
 		width: 23%;
 		font-size: 24px;
-	}
+	} */
 }
 
 /* mobile or only mobile */
